# one-piece-lcd

./: .gitignore  README.md  main.py  pyproject.toml
assets/: one-piece-characters-wiki.json  one-piece-episodes-wiki.json
one_piece_lcd/: __init__.py  cli.py  server.py
one_piece_lcd/constants/: config.py  paths.py
one_piece_lcd/models/: character.py  episode.py  video.py
one_piece_lcd/processors/: character.py  faces.py  video.py
one_piece_lcd/scrapers/: episodes.py
one_piece_lcd/static/: viewer.css  viewer.html  viewer.js
one_piece_lcd/utils/: characters.py  normalization.py
