[project]
name = "one-piece-lcd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8.0,<4.11",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.0.0",
    "click>=8.1.0",
    # PyTorch for deep learning models (need 2.2+ for newer transformers)
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    # Transformers for CLIP/SigLIP (SigLIP requires 4.39+)
    "transformers>=4.40.0",
    # SentencePiece for SigLIP tokenizer
    "sentencepiece>=0.1.99",
    # Protobuf for SigLIP
    "protobuf>=3.20.0",
    "numpy>=1.24.0,<2",
    "pillow>=10.0.0",
    # YOLOv8 for anime face detection
    "ultralytics>=8.0.0",
    # HuggingFace Hub for model downloads
    "huggingface-hub>=0.20.0",
    # Web server for visualization
    "flask>=3.0.0",
]

[project.scripts]
oplcd = "one_piece_lcd.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
